# matrix

./: .coverage  .cursorrules  .dockerignore  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GPU_SUPPORT_IMPLEMENTATION.md  LICENSE  Makefile  PostgreSQL-CloudNativePG-Setup.md  README.md  Redis-Setup.md  actionlint.yaml  article.md  codemeta.json  docker-compose-cache.json  docker-compose.test.yml  docker-compose.yml  donate_button_implementation_summary.md  entrypoint.sh  notes.md  pertubation_experiment.md  post.md  pyproject.toml  ruff.toml  schemaorg.jsonld  secret_testfile  test.cql  test_complete_dynamic_system.py  test_dynamic_bucket_selection.py  tmp_workbench.py
apps/matrix-cli/: .gitignore  Makefile  README.md  __init__.py  main.py  notes.md  post.md  pyproject.toml
apps/matrix-cli/modules/: releases.py
apps/matrix-cli/test/: conftest.py  test_cli.py  test_code.py  test_releases.py  test_utils.py
apps/matrix-cli/tests/: test_fabricator.py  test_primekg.py
apps/matrix-cli/tools/: diff_between_code.sh  import-pub-key-full-trust.sh  remove-gpg-user.sh
apps/matrix-io/: Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
apps/pca-uploader/: .gitignore  Makefile  README.md  __init__.py  env.example  example_kedro_usage.py  pyproject.toml  upload_pca_to_neo4j.py
docs/: .firebaserc  .gcloudignore  .gitignore  Dockerfile  Makefile  app.yaml  firebase.json  license_addition.md  mkdocs.yml  prometheus-sigbus-troubleshooting.md  pyproject.toml  requirements.in  requirements.txt  scripts.py
docs/docs/: Makefile  index.md  mkdocs.yml  requirements.txt
docs/docs/contribute/: documentation.md
docs/docs/docs/: infra.md
docs/docs/infrastructure/: 10_compute_cluster.md  11_networking.md  90_gcp_foundations.md
docs/overrides/: main.html
docs/scripts/: bump_detection.py  bump_version.py  changelog_gen.py  gen_doc_stubs.py  minor_bump.py  patch_bump.py  test_bump_detection.py  test_bump_version.py  test_changelog_gen.py  utils.py
docs/src/: .pages  FAQ.md  index.md  resources.md
docs/src/FAQ/: common_errors.md
docs/src/contribute/: .pages  common_errors.md  contribution_standards.md  documentation.md  get_access_to_data.md  index.md  onboard_to_matrix_platform.md  release_agent_prompt.md
docs/src/data/: releases.yaml
docs/src/data_science/: .pages  evaluation_deep_dive.md  index.md  moa_extraction.md  model_selection.md  modelling_workbenches.md  pandera_validation.md
docs/src/debugging/: neo4j.md
docs/src/disease-list/: filtering.md
docs/src/docs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/src/experiments/: index.md
docs/src/getting_started/: .pages  index.md  kedro_notebook_example.ipynb  local-development.md  onboarding_guide.md  orchard_data_usage.md  pipeline.md
docs/src/infrastructure/: .pages  10_compute_cluster.md  90_gcp_foundations.md  CPU_ALLOCATION_SUMMARY.md  DOCKER_CLEANUP_IMPLEMENTATION.md  GPU_CONFIGURATION.md  GPU_SUPPORT_IMPLEMENTATION.md  LiteLLM-Admin-Guide.md  LiteLLM-New-Provider-Guide.md  LiteLLM-Setup.md  LiteLLM-Usage.md  LiteLLM-User-Guide.md  PostgreSQL-CloudNativePG-Setup.md  Redis-Setup.md  SPARK_TEMP_DIRECTORY_CONFIG.md  TUNING_PARALLEL_OPTIMIZATION.md  architecture_decision_records.md  argo_workflows_locally.md  billing-labels.md  ci.md  compute_cluster.md  dcgm-gpu-monitoring.md  dns.md  gcp.md  gcp_auto_detection.md  gcp_foundations.md  gcp_project_template.md  git-crypt.md  gke-safe-eviction.md  glossary.md  iap.md  iap_programmatic_access.md  index.md  kubernetes_cluster.md  neo4j.md  networking.md  observability.md  orchard_data_access.md  production_access.md  public_data_zone.md  (+2 more)
docs/src/links/: index.md
docs/src/matrix/: .pages  ci.md  data-release-sensors.md  data_access_layer.md  data_api.md  evaluation.md  index.md  key_files.md  local-development.md  pipeline.md  software_licences.md  status.md
docs/src/matrix_docs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/src/onboarding/: .pages  environments_overview.md  gcp_environments.md  git-crypt.md  index.md  installation.md  kedro.md  kedro_extensions.md  kedro_notebook_example.ipynb  local-development.md  local-setup.md  pipeline.md  sample_environment.md  use_case.md  use_case_data_catalog_exploration.md  walkthrough.md  walkthrough_data_catalog.md
docs/src/pipeline/: .pages  branch-management.md  caching.md  embeddings.md  index.md  (+7 more)
libs/matrix-auth/: pyproject.toml
libs/matrix-fabricator/: pyproject.toml
libs/matrix-gcp-datasets/: pyproject.toml
libs/matrix-inject/: pyproject.toml
libs/matrix-io-utils/: pyproject.toml
libs/matrix-mlflow-utils/: pyproject.toml
libs/matrix-pandera/: pyproject.toml
libs/matrix-validator/: Makefile  pyproject.toml
pipelines/core_entities/: .env.defaults  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
pipelines/fuse/: .gitignore  README.md  pyproject.toml
pipelines/huggingface-dataset-demo/: README.md  pyproject.toml  pytest.ini  requirements.txt
pipelines/matrix/: .dockerignore  .env  .env.defaults  .env.tmpl  .gitignore  CPU_ALLOCATION_SUMMARY.md  Dockerfile  EDA_embed.ipynb  HUGGINGFACE_DATASET_SPEC.md  LC_predictions_27_aug.ipynb  Makefile  OPTIMIZED_FOR_111_CPUS.md  README.md  README_from_run_example.md  SMT_DISABLED_IMPACT.md  SPARK_TEMP_DIRECTORY_CONFIG.md  TUNING_PARALLEL_OPTIMIZATION.md  WHY_NOT_ALL_PARALLEL.md  catalog_loading.ipynb  cloudbuild.yaml  custom_modelling.ipynb  example_notebook.ipynb  experiment.sh  kedro-data-releases-v0.3.6-datasets-integration-int-disease_list.nodes-nodes_norm_mapping-part-00000-024ed9df-67a8-49b1-9c13-ba91caf40822-c000.snappy.parquet  login  notes.md  pyg-requirements.txt  pyproject.toml  requirements.dev.in  requirements.in  requirements.overrides.txt  requirements.txt  session_store.db  stats.json  test_complete_dynamic_system.py  test_oxigraph.py  trivy.yaml  weights_notebook.ipynb
pipelines/review-list/: README.md  pyproject.toml  requirements.in  requirements.txt
(+2168 files in other folders)
