# Root project, only defines child dependencies which all share one venv
[project]
name = "matrix"
version = "0.1.0"
requires-python = "~=3.11.0"
dependencies = [
    # we depend on all our workspace members here to enable a single
    # 'uv sync' at the root to set up the entire monorepo development
    # work. However the Dockerfile in pipelines/matrix does some tricks
    # to avoid re-building at any file change. See Dockerfile for details
    "matrix-pipeline",
    "matrix-docs",
    "matrix-auth",
    "matrix-cli",
    "matrix-gcp-datasets",
    "matrix-mlflow-utils",
    "matrix-fabricator",
    "matrix-inject",
    "matrix-io-utils",
    "matrix-inject",
    "matrix-pandera",
    "matrix-validator",
    "pre-commit>=4.2.0",
    "owlready2>=0.49",
    "core-entities-pipeline",
    "pandas-stubs~=2.3.3",
]

[tool.uv.sources]
matrix-pipeline = { workspace = true }
matrix-docs = { workspace = true }
matrix-auth = { workspace = true }
matrix-gcp-datasets = { workspace = true }
matrix-mlflow-utils = { workspace = true }
matrix-fabricator = { workspace = true }
matrix-io-utils = { workspace = true }
matrix-inject = { workspace = true }
matrix-cli = { workspace = true }
matrix-pandera = { workspace = true }
matrix-validator = { workspace = true }
core-entities-pipeline = {workspace = true }

[tool.uv.workspace]
members = [
    # pipelines, which may be run
    "pipelines/matrix",
    # docs which are built statically and then deployed
    "docs",
    # shared libraries
    "libs/*",
    # apps
    "apps/*",
    "pipelines/core_entities"
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
# importlib mode lets pytest collect tests across all workspace packages from
# the repo root without hitting "No module named 'tests.xxx'" errors that occur
# with the default prepend mode when packages share a `tests/` namespace.
addopts = [
    "--import-mode=importlib",
]
norecursedirs = [
    ".venv",
    # data/ contains external packages with their own test suites that duplicate
    # what is already present under src/ — skip to avoid import mismatch errors.
    "pipelines/*/data",
    # src/ subtrees inside pipelines are collected via the package's own test run;
    # collecting them from root causes duplicate-module conflicts.
    "pipelines/*/src",
    "compose",
    "packages",
    "node_modules",
    "infra",
    # These packages register pytest plugins via conftest.py and must be run from
    # their own directory (cd <pkg> && pytest) to avoid double-registration errors
    # when collected from the repo root.
    "libs/matrix-inject",
    "libs/matrix-pandera",
    "pipelines/matrix",
    # docs/scripts tests rely on relative imports that only work when pytest is
    # run from inside docs/ — exclude from root collection.
    "docs",
] 
