[project]
name = "matrix-cli"
description = "matrix-cli"
requires-python = ">=3.11"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "typer",
    "matrix-io-utils",
    "matrix-validator",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
fabricator = "matrix_cli.io.fabricator:main"
primekg = "matrix_cli.io.primekg:main"
robokop = "matrix_cli.io.robokop:main"
validator = "matrix_cli.io.validator:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"
