# NOTE: This pyproject.toml was partially generated using AI assistance.

[project]
name = "matrix-pca-uploader"
version = "0.1.0"
description = "PCA coordinate uploader for Matrix pipeline embeddings to Neo4j"
requires-python = "==3.11.13"
dependencies = [
    "matrix-pipeline",
    "neo4j>=5.0.0",
    "pandas>=1.5.0",
    "tqdm>=4.64.0",
    "pyarrow>=10.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "joblib>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
