[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-fabricator"
version = "0.1.0"
description = "Data fabrication and generation utilities for Matrix platform"
requires-python = ">=3.11"
dependencies = [
    "kedro>=0.19.0",
    "pandas",
    "numpy",
    "faker",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock", 
    "ruff",
    "pyspark>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]