[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-gcp-datasets"
version = "0.1.0"
description = "Custom Kedro datasets for Google Cloud Platform services"
requires-python = "==3.14.*"
dependencies = [
    "kedro>=0.19.0",
    "kedro-datasets==9.3.0",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "google-api-core",
    "fsspec",
    "hdfs",
    "numpy",
    "pandas",
    "pandas-gbq",
    "gspread",
    "pyspark>=3.5.0",
    "s3fs",
    "tqdm",
    "asyncio",
    "datasets",
    "huggingface-hub",
    "semantic-version>=2.10.0",
    "typer>=0.20.0",
    "pydantic",
    "pyspark"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
]
# adding this to be able to run pytest locally
[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.setuptools.packages.find]
where = ["src"]