[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-io-utils"
version = "0.1.0"
description = "Matrix IO utilities"
requires-python = ">=3.11"
dependencies = [
    "polars-lts-cpu==1.30.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
# adding this to be able to run pytest locally
[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.setuptools.packages.find]
where = ["src"]