[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-mlflow-utils"
version = "0.1.0" 
description = "MLFlow utilities and integrations for Matrix platform"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.20.0",
    "kedro>=0.19.0",
    "pandas",
    "kedro-mlflow==0.13.4",
    "numpy",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]
# adding this to be able to run pytest locally
[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.setuptools.packages.find]
where = ["src"]