[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "fuse"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
fuse = "fuse.__main__:main"

[tool.kedro]
package_name = "fuse"
project_name = "fuse"
kedro_init_version = "0.19.7"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "fuse.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "cec818f6daa941899feb8b58a8ed93d1"
