[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.dependencies]
 file = "requirements.txt"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "--ignore=packages",

]
norecursedirs = [
    ".venv",
    "data",
    "compose",
    "packages",
]
markers = [
    "integration: mark a test as an integration test.",
    "spark: mark a test as a spark test & requires PYSPARK_PYTHON to be set appropriately",
]

[project]
name = "matrix"
requires-python = ">=3.11"
readme = "README.md"
dynamic = [ "version"]

[project.scripts]
matrix = "matrix.__main__:main"

[tool.kedro]
package_name = "matrix"
project_name = "matrix"
kedro_init_version = "0.19.13"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]
