# NOTE: This pyproject.toml was partially generated using AI assistance.
[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "--ignore=packages",

]
norecursedirs = [
    ".venv",
    "data",
    "compose",
    "packages",
]
markers = [
    "integration: mark a test as an integration test.",
    "spark: mark a test as a spark test & requires PYSPARK_PYTHON to be set appropriately",
]

[project]
name = "matrix-pipeline"
requires-python = "==3.11.13" #depends on unpinning numpy
readme = "README.md"
dynamic = [ "version"]
dependencies = [
    "faker",
    "matrix-schema==0.4.0",
    "matrix-auth",
    "matrix-gcp-datasets",
    "matrix-mlflow-utils", 
    "matrix-fabricator",
    "git+https://github.com/everycure-org/matrix-validator.git@v0.0.6#egg=matrix-validator",
    "bmt",  # biolink model toolkit
    "gcsfs==2024.3.1",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "db-dtypes",  # needed for bigquery in line queries in notebooks
    "google-cloud-iam",
    "graphdatascience",
    "hdfs==2.7.3",
    "ipython>=8.10",
    "ipywidgets",
    "jsonpath-ng",
    "jupyterlab>=3.0",
    "kedro-datasets>=6.0.0",
    "kedro-mlflow==0.13.4",
    "kedro-telemetry>=0.3.1",
    "kedro-viz>=11.0.0",
    "kedro==0.19.13",
    "langchain",
    "langchain-openai",
    "matplotlib",
    "mlflow==2.20.3",
    "neo4j>=5.5.0",
    "notebook",
    "numpy==1.24.4",  # This was pinned during refit refactor; fabricator pipeline fails on 1.26.4
    "openai",
    "openpyxl",
    "pandera==0.24.0",
    "pandas>=2.1.1", #due to pandera requiring this or higher
    "proto-plus==1.24.0.dev1",  # Temp. fix for the gcloud cli
    "pyarrow>=14.0.2",
    "pygsheets==2.0.6",
    "pyspark==3.5.1",
    "python-cypher==0.20.1",
    "responses",
    "rich",
    "s3fs",
    "semver==3.0.2",
    "scikit-learn==1.5.0",
    "scikit-optimize",
    "seaborn",
    "tenacity",
    "termplotlib",
    "torch==2.7.1",
    "transformers",
    "typer",  # used for convenience libraries, to be moved to a dev requirements eventually
    "xgboost",
]

[project.scripts]
matrix = "matrix.__main__:main"

[tool.kedro]
package_name = "matrix"
project_name = "matrix"
kedro_init_version = "0.19.13"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-testmon",
    "pytest-timeout>=2.3.1",
    "ruff>=0.12.4",  # Matches pre-commit version
]
pre-commit = [
    "pre-commit>=4.2.0",
]
