[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "--ignore=packages",

]
norecursedirs = [
    ".venv",
    "data",
    "compose",
    "packages",
]
markers = [
    "integration: mark a test as an integration test.",
    "spark: mark a test as a spark test & requires PYSPARK_PYTHON to be set appropriately",
]

[project]
name = "matrix-pipeline"
requires-python = "~=3.11.0" #depends on unpinning numpy
readme = "README.md"
dynamic = [ "version"]
dependencies = [
    "faker",
    "matrix-schema==0.4.3",
    "matrix-auth",
    "matrix-gcp-datasets",
    "matrix-mlflow-utils",
    "matrix-fabricator",
    "matrix-inject",
    "matrix-pandera",
    "matrix-validator @ git+https://github.com/everycure-org/matrix-validator.git@v0.0.6#egg=matrix-validator",
    "bmt", # biolink model toolkit
    "gcsfs==2024.3.1",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "db-dtypes", # needed for bigquery in line queries in notebooks
    "google-cloud-iam",
    "graphdatascience",
    "ipython>=8.10",
    "ipywidgets",
    "jsonpath-ng",
    "jupyterlab>=3.0",
    "kedro-datasets>=6.0.0",
    "kedro-telemetry>=0.3.1",
    "kedro-viz>=11.0.0",
    "kedro~=0.19.13",
    "langchain",
    "langchain-openai",
    "matplotlib",
    "mlflow==2.20.3",
    "neo4j>=5.5.0",
    "notebook",
    "numpy==1.24.4", # This was pinned during refit refactor; fabricator pipeline fails on 1.26.4
    "openai",
    "openpyxl",
    "pandera==0.24.0",
    "pandas>=2.1.1", #due to pandera requiring this or higher
    "proto-plus==1.24.0.dev1", # Temp. fix for the gcloud cli
    "pyarrow>=14.0.2",
    "pygsheets==2.0.6",
    "pyspark==3.5.1",
    "python-cypher==0.20.1",
    "responses",
    "rich",
    "semver==3.0.2",
    "scikit-learn==1.5.0",
    "scikit-optimize",
    "seaborn",
    "tenacity",
    "termplotlib",
    "torch==2.7.1",
    "transformers",
    "typer", # used for convenience libraries, to be moved to a dev requirements eventually
    "xgboost",
    "tqdm>=4.67.1",
]

[project.scripts]
matrix = "matrix.__main__:main"

[tool.kedro]
package_name = "matrix"
project_name = "matrix"
kedro_init_version = "0.19.13"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-testmon",
    "pytest-timeout>=2.3.1",
    "ruff>=0.12.4", # Matches pre-commit version
    # for mypy type checks
    "lxml-stubs>=0.5.1",
    "scipy-stubs>=1.16.0.2",
    "pandas-stubs>=2.3.0.250703",
    "types-antlr4-python3-runtime>=4.13.0.20250801",
    "types-cachetools>=6.1.0.20250717",
    "types-cffi>=1.17.0.20250809",
    "types-colorama>=0.4.15.20250801",
    "types-decorator>=5.2.0.20250324",
    "types-defusedxml>=0.7.0.20250809",
    "types-docker>=7.1.0.20250809",
    "types-gevent>=25.4.0.20250814",
    "types-greenlet>=3.2.0.20250809",
    "types-html5lib>=1.1.11.20250809",
    "types-jsonschema>=4.25.0.20250809",
    "types-networkx>=3.5.0.20250812",
    "types-paramiko>=4.0.0.20250809",
    "types-pexpect>=4.9.0.20250809",
    "types-protobuf>=6.30.2.20250809",
    "types-psutil>=7.0.0.20250801",
    "types-pyasn1>=0.6.0.20250516",
    "types-pycurl>=7.45.6.20250801",
    "types-pygments>=2.19.0.20250809",
    "types-pyopenssl>=24.1.0.20240722",
    "types-pysftp>=0.2.17.20250805",
    "types-pytz>=2025.2.0.20250809",
    "types-pywin32>=311.0.0.20250809",
    "types-pyyaml>=6.0.12.20250809",
    "types-regex>=2025.7.34.20250809",
    "types-requests>=2.32.4.20250809",
    "types-seaborn>=0.13.2.20250809",
    "types-setuptools>=80.9.0.20250809",
    "types-simplejson>=3.20.0.20250326",
    "types-tabulate>=0.9.0.20241207",
    "types-tensorflow>=2.18.0.20250809",
    "types-toml>=0.10.8.20240310",
    "types-tqdm>=4.67.0.20250809",
    "types-ujson>=5.10.0.20250326",
    "pytest-xdist>=3.8.0",
]
pre-commit = [
    "pre-commit>=4.2.0",
]
